build(test): migrate JUnit4 assertion arguments order to JUnit5 style, simplify where reasonable #9782